# urbanity

./: .gitattributes  .gitignore  .readthedocs.yml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  environment.yml  index.html  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  setup.sh
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci-cd.yml
changelog/: index.html
contributing/: index.html
data/: countries.csv  country.json
data/london_map/: London_Ward_CityMerged.dbf  London_Ward_CityMerged.shp
data/sg_map/: G_MP14_LAND_USE_PL.sbx  G_MP14_LAND_USE_PL.shp.xml  G_MP14_LAND_USE_PL.shx
data_boundary/: tpzone.geojson
data_boundary/london_map/: London_Ward_CityMerged.shx
data_boundary/sg_map/: G_MP14_LAND_USE_PL.sbn
docs/: Makefile  README.md  conf.py  contributing.md  example.ipynb  index.md  installation.md  make.bat  requirements.txt  urbanity_more.md  usage.md
docs/notebooks/: basic_functionality.ipynb  network_assortativity.ipynb  test.ipynb  transductive_graph_ml.ipynb
examples/: intro.ipynb  my_config.json  osm_import.ipynb  testing_package.ipynb
examples/data/: london.geojson
faq/: index.html
notebooks/test/: index.html
search/: search_index.json
site/: index.html  search.html  sitemap.xml
site/apple/: index.html
site/contributing/: index.html
site/faq/: index.html
site/installation/: index.html
site/search/: search_index.json
site/urbanity/: index.html
site/usage/: index.html
src/urbanity/: __init__.py  building.py  data_class.py  geom.py  integration.py  population.py  satellite.py  svi.py  topology.py  urbanity.py  utils.py  visualisation.py
src/urbanity/building_height_data/: building_grids.json
src/urbanity/ghs_data/: global_ghs_grid.parquet
src/urbanity/lcz_data/: lcz_data.json
src/urbanity/map_data/: GADM_links.json  Spain.geojson  UnitedStates.geojson  country.json  links_general.json  links_general_tiled.json  network_data.json  poi_filter.json  tiled_data.json
src/urbanity/overture_data/: overture_building.json  overture_places.json
src/urbanity/svi_data/: Amsterdam.geojson  Antwerp.geojson  Bangkok.geojson  Barcelona.geojson  Chicago.geojson  Denver.geojson  Seattle.geojson  num_to_class.json  sg_svi.geojson  svi_data.json
tests/: __init__.py  test_urbanity.py
urbanity/: __init__.py  cli.py  index.html
urbanity_more/: index.html
usage/: index.html
