[tool.poetry]
name = "urbanity"
version = "0.3.10"
description = ""
authors = ["winstonyym <winstonyym@u.nus.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
vt2geojson = "^0.2.1"
networkx = "2.8.6"
numpy = "1.23.3"
pyrobuf = "0.9.3"
urllib3 = "^1.26.11"
charset-normalizer = "2.1.1"
rasterstats = "0.17.0"
geopandas = "0.12.0"
ipykernel = "6.16.2"
ipyleaflet = "0.17.2"
pyrosm = "0.6.1"
networkit = "10.0"
protobuf = "3.20.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
jupyter = "^1.0.0"
myst-nb = "^0.17.1"
sphinx-autoapi = "^2.0.0"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
