[tool.poetry]
name = "urbanity"
version = "0.5.1"
description = ""
authors = ["winstonyym <winstonyym@u.nus.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
networkx = "2.8.6"
pyrobuf = "0.9.3"
charset-normalizer = "2.1.1"
ipykernel = "6.16.2"
ipyleaflet = "0.17.2"
pyrosm = "0.6.2"
protobuf = "3.20.0"
mercantile = "^1.2.1"
ipywidgets = "8.0.2"
rasterio = "^1.3.8"
pandas = "^2.2.2"
geopandas = "^1.0.1"
numpy = "1.26.4"
overturemaps = "^0.8.0"
h5py = "^3.11.0"
networkit = "10.1"
pydeck = "^0.9.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
myst-nb = "1.1.2"
sphinx-autoapi = "3.0.0"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
