[tool.poetry]
name = "urbanity"
version = "0.5.18"  # patch: make pyrosm optional for faster base install
description = "A python package to generate urban graphs for any geographical location and scale"
authors = ["winstonyym <winstonyym@u.nus.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
networkx = "2.8.6"
ipykernel = "6.16.2"
ipyleaflet = "0.17.2"
pyrosm = {version = "0.6.2", optional = true}
protobuf = {version = "3.20.0", optional = true}
mercantile = "^1.2.1"
ipywidgets = "8.0.2"
rasterio = "^1.3.8"
pandas = "^2.2.2"
geopandas = "^1.0.1"
numpy = "1.26.4"
pyrobuf = {version = "^0.9.3", optional = true}
pydeck = "^0.9.1"
dotenv = "^0.9.9"

[tool.poetry.extras]
osm = ["pyrosm", "protobuf", "pyrobuf"]

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
myst-nb = "1.1.2"
sphinx-autoapi = "3.0.0"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
